--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
+    "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "mongoose-auto-increment": "^5.0.1",
+    "mongoose-sequence": "^5.3.1"
   }
 }
