--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "express": "^4.17.1",
@@ -18,6 +19,7 @@
     "handlebars": "^4.7.7",
     "mongoose": "^5.13.5",
     "mongoose-auto-increment": "^5.0.1",
-    "mongoose-sequence": "^5.3.1"
+    "mongoose-sequence": "^5.3.1",
+    "morgan": "^1.10.0"
   }
 }
