--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^5.13.5",
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-sequence": "^5.3.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
